<resources>
    <string name="app_name">Articulos Tesla</string>
    <string name="movie_title">Título del articulo</string>
    <string name="title_list">Articulos</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_detail">Detalle</string>
    <string name="release_date_label">Autor: </string>
    <string name="release_date_example">30-nov-2020</string>
    <string name="vote_average_example">10</string>
    <string name="vote_average_label">Fecha de publicacion: </string>
    <string name="summary">Resumen</string>
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
</resources>